--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -214,7 +214,7 @@
 				<div class="product-catalog__container">
 					<div class="product-catalog__image image-product-catalog">
 						<div class="image-product-catalog__body">
-							<picture><source srcset="img/product-catalog/glass.webp" type="image/webp"><img src="img/product-catalog/glass.png" alt="Зображення"></picture>
+							<picture><source srcset="../../Water-Delivery/img/product-catalog/glass.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/glass.png" alt="Зображення"></picture>
 						</div>
 					</div>
 					<div class="product-catalog__body">
@@ -226,7 +226,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-1.webp" type="image/webp"><img src="img/product-catalog/19-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Моршинська</h4>
@@ -237,7 +237,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-2.webp" type="image/webp"><img src="img/product-catalog/19-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Аляска</h4>
@@ -248,7 +248,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-3.webp" type="image/webp"><img src="img/product-catalog/19-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Росяна</h4>
@@ -259,7 +259,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/19-4.webp" type="image/webp"><img src="img/product-catalog/19-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/19-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/19-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Царичанська</h4>
@@ -279,7 +279,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-1.webp" type="image/webp"><img src="img/product-catalog/6-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Моршинська (минеральная)</h4>
@@ -290,7 +290,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-2.webp" type="image/webp"><img src="img/product-catalog/6-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Моршинська (минеральная)</h4>
@@ -301,7 +301,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-3.webp" type="image/webp"><img src="img/product-catalog/6-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Росяна</h4>
@@ -312,7 +312,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/6-4.webp" type="image/webp"><img src="img/product-catalog/6-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/6-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/6-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Моршинська</h4>
@@ -332,7 +332,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-1.webp" type="image/webp"><img src="img/product-catalog/2-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Оболонська-2 (негазированная)</h4>
@@ -343,7 +343,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-2.webp" type="image/webp"><img src="img/product-catalog/2-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Царичанська</h4>
@@ -354,7 +354,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-3.webp" type="image/webp"><img src="img/product-catalog/2-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Миргородська Лагідна</h4>
@@ -365,7 +365,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/2-4.webp" type="image/webp"><img src="img/product-catalog/2-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/2-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/2-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Бон Буасон (минеральная)</h4>
@@ -385,7 +385,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-1.webp" type="image/webp"><img src="img/product-catalog/1-5-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Bon Aqua (негазированная)</h4>
@@ -396,7 +396,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-2.webp" type="image/webp"><img src="img/product-catalog/1-5-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Бон Буасон Лимон</h4>
@@ -407,7 +407,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-3.webp" type="image/webp"><img src="img/product-catalog/1-5-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Миргородська (нежная)</h4>
@@ -418,7 +418,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/1-5-4.webp" type="image/webp"><img src="img/product-catalog/1-5-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/1-5-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Моршинська (слабогазированная)</h4>
@@ -438,7 +438,7 @@
 										<div class="slider-product__wrapper swiper-wrapper">
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-1.webp" type="image/webp"><img src="img/product-catalog/0-5-1.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-1.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-1.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Карпатська Високогірна (газированная)</h4>
@@ -449,7 +449,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-2.webp" type="image/webp"><img src="img/product-catalog/0-5-2.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-2.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-2.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Природне Джерело (негазированная)</h4>
@@ -460,7 +460,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-3.webp" type="image/webp"><img src="img/product-catalog/0-5-3.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-3.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-3.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Buvette (минеральная)</h4>
@@ -471,7 +471,7 @@
 											</div>
 											<div class="slider-product__slide swiper-slide">
 												<div class="slider-product__image">
-													<picture><source srcset="img/product-catalog/0-5-4.webp" type="image/webp"><img src="img/product-catalog/0-5-4.png" alt="Зображення"></picture>
+													<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-4.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/0-5-4.png" alt="Зображення"></picture>
 												</div>
 												<div class="slider-product__content">
 													<h4 class="slider-product__title">Вода Аква (негазированная)</h4>
