--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -213,7 +213,7 @@
 				<div class="product-catalog__container">
 					<div class="product-catalog__image image-product-catalog">
 						<div class="image-product-catalog__body">
-							<picture><source srcset="img/product-catalog/glass.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/glass.png" alt="Зображення"></picture>
+							<picture><source srcset="../../Water-Delivery/img/product-catalog/glass.webp" type="image/webp"><img src="../../Water-Delivery/img/product-catalog/glass.png" alt="Зображення"></picture>
 						</div>
 					</div>
 					<div class="product-catalog__body">
