--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -502,7 +502,7 @@
 			</section>
 			<section class="page__equipment equipment">
 				<div class="equipment__mob-bg-ibg">
-					<picture><source srcset="img/equipment/BG-equipment.webp" type="image/webp"><img src="img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
+					<picture><source srcset="../../Water-Delivery/img/equipment/BG-equipment.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
 				</div>
 				<div class="equipment__container">
 					<div class="equipment__catalog catalog-equipment">
@@ -511,7 +511,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/01.webp" type="image/webp"><img src="img/equipment/01.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/01.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/01.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Floor Coolers</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -520,7 +520,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/02.webp" type="image/webp"><img src="img/equipment/02.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/02.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/02.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Tabletop Coolers</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -529,7 +529,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/03.webp" type="image/webp"><img src="img/equipment/03.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/03.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/03.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Pumps</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -538,7 +538,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/04.webp" type="image/webp"><img src="img/equipment/04.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/04.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/04.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Purifires</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -547,7 +547,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/05.webp" type="image/webp"><img src="img/equipment/05.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/05.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/05.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Dispensers</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -556,7 +556,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/06.webp" type="image/webp"><img src="img/equipment/06.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/06.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/06.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Accessories</h4>
 										<a href="order_EN.html" class="equipment-item__button button">More</a>
@@ -570,7 +570,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/01.webp" type="image/webp"><img src="img/equipment/01.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/01.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/01.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Floor Coolers</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -579,7 +579,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/02.webp" type="image/webp"><img src="img/equipment/02.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/02.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/02.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Tabletop Coolers</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -588,7 +588,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/03.webp" type="image/webp"><img src="img/equipment/03.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/03.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/03.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Pumps</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -597,7 +597,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/04.webp" type="image/webp"><img src="img/equipment/04.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/04.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/04.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Purifiers</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -606,7 +606,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/05.webp" type="image/webp"><img src="img/equipment/05.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/05.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/05.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Dispensers</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -615,7 +615,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/06.webp" type="image/webp"><img src="img/equipment/06.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/06.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/06.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Accessories</h4>
 											<a href="order_EN.html" class="equipment-item__button button" tabindex="-1">More</a>
@@ -631,7 +631,7 @@
 					<div class="equipment__picture">
 						<h2 class="equipment__title">equipment for water</h2>
 						<div class="equipment__image-ibg">
-							<picture><source srcset="img/equipment/BG-equipment.webp" type="image/webp"><img src="img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
+							<picture><source srcset="../../Water-Delivery/img/equipment/BG-equipment.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
 						</div>
 					</div>
 				</div>
