--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -503,7 +503,7 @@
 			</section>
 			<section class="page__equipment equipment">
 				<div class="equipment__mob-bg-ibg">
-					<picture><source srcset="img/equipment/BG-equipment.webp" type="image/webp"><img src="img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
+					<picture><source srcset="../../Water-Delivery/img/equipment/BG-equipment.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
 				</div>
 				<div class="equipment__container">
 					<div class="equipment__catalog catalog-equipment">
@@ -512,7 +512,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/01.webp" type="image/webp"><img src="img/equipment/01.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/01.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/01.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Напольные кулера</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -521,7 +521,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/02.webp" type="image/webp"><img src="img/equipment/02.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/02.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/02.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Настольные кулера</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -530,7 +530,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/03.webp" type="image/webp"><img src="img/equipment/03.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/03.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/03.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Помпы</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -539,7 +539,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/04.webp" type="image/webp"><img src="img/equipment/04.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/04.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/04.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Пурифаеры</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -548,7 +548,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/05.webp" type="image/webp"><img src="img/equipment/05.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/05.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/05.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Диспэнсэры</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -557,7 +557,7 @@
 								<li class="list-equipment__item">
 									<div class="list-equipment__item-body equipment-item">
 										<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-											<picture><source srcset="img/equipment/06.webp" type="image/webp"><img src="img/equipment/06.png" alt="Зображення"></picture>
+											<picture><source srcset="../../Water-Delivery/img/equipment/06.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/06.png" alt="Зображення"></picture>
 										</div>
 										<h4 class="equipment-item__title">Аксесуары</h4>
 										<a href="order_RU.html" class="equipment-item__button button">Подробнее</a>
@@ -571,7 +571,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/01.webp" type="image/webp"><img src="img/equipment/01.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/01.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/01.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Напольные кулера</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -580,7 +580,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/02.webp" type="image/webp"><img src="img/equipment/02.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/02.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/02.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Настольные кулера</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -589,7 +589,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/03.webp" type="image/webp"><img src="img/equipment/03.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/03.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/03.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Помпы</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -598,7 +598,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/04.webp" type="image/webp"><img src="img/equipment/04.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/04.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/04.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Пурифаеры</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -607,7 +607,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/05.webp" type="image/webp"><img src="img/equipment/05.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/05.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/05.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Диспенсеры</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -616,7 +616,7 @@
 									<div class="slider-equipment__slide swiper-slide">
 										<div class="equipment-item">
 											<div class="equipment-item__image-ibg equipment-item__image-ibg_contain">
-												<picture><source srcset="img/equipment/06.webp" type="image/webp"><img src="img/equipment/06.png" alt="Зображення"></picture>
+												<picture><source srcset="../../Water-Delivery/img/equipment/06.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/06.png" alt="Зображення"></picture>
 											</div>
 											<h4 class="equipment-item__title">Аксесуары</h4>
 											<a href="order_RU.html" class="equipment-item__button button" tabindex="-1">Подробнее</a>
@@ -632,7 +632,7 @@
 					<div class="equipment__picture">
 						<h2 class="equipment__title">Оборудование для воды</h2>
 						<div class="equipment__image-ibg">
-							<picture><source srcset="img/equipment/BG-equipment.webp" type="image/webp"><img src="img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
+							<picture><source srcset="../../Water-Delivery/img/equipment/BG-equipment.webp" type="image/webp"><img src="../../Water-Delivery/img/equipment/BG-equipment.jpg" alt="Зображення"></picture>
 						</div>
 					</div>
 				</div>
