--- a/EN/index_EN.html
+++ b/EN/index_EN.html
@@ -648,7 +648,7 @@
 									<div class="side-mob__num">1</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-aplication.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-aplication.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -672,7 +672,7 @@
 									<div class="side-mob__num">2</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-confirmation.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-confirmation.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -696,7 +696,7 @@
 									<div class="side-mob__num">3</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-delivery.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-delivery.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -706,31 +706,31 @@
 							<ul class="how-work__items">
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-aplication.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-aplication.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Application</h4>
 									<div class="how-work__text">You can request a callback, fill out an order form, or simply call us</div>
 								</li>
 								<li class="how-work__item how-work__item-arrow">
 									<div class="how-work__arrow-next-ibg">
-										<img src="img/info/next-arrow.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/next-arrow.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-confirmation.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-confirmation.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Confirmation</h4>
 									<div class="how-work__text">Our specialist will find out the exact time and address of delivery, as well as a convenient form of payment for you</div>
 								</li>
 								<li class="how-work__item how-work__item-arrow">
 									<div class="how-work__arrow-next-ibg">
-										<img src="img/info/next-arrow.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/next-arrow.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-delivery.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-delivery.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Delivery</h4>
 									<div class="how-work__text">Delivery of water and of other goods is<span> free of charge </span>and within stipulated time</div>
@@ -745,20 +745,20 @@
 								<li class="payment__item">
 									<div class="payment__text"><span class="payment__text-bold">In cash </span>to courier<span class="payment__text-italic"> during delivery</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-cash.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-cash.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
 									<div class="payment__text"><span class="payment__text-bold">With bank card </span>using bank terminal<span class="payment__text-italic"> during
 											delivery</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-card.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-card.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
 									<div class="payment__text">With application<span class="payment__text-bold"> "Privat24" </span><span class="payment__text-italic">within prepayment</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-privat.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-privat.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
@@ -766,7 +766,7 @@
 											prepayment</span>
 									</div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-cashless.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-cashless.svg" alt="іконка">
 									</div>
 								</li>
 							</ul>
